blocks/form.css
.form {
  display: flex;
}

.form_visibility_none {
  display: none;
}

.form__overlay {
  position: absolute;
  z-index: 3;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: #000;
  opacity: 50%;
}

.form__content {
  z-index: 5;
  display: flex;
  flex-direction: column;
  position: absolute;
  background-color: #fff;
  color: #000;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border-radius: 15px;
  padding: 34px 36px 0;
}

.form__title {
  margin: 0 0 48px;
  font-family: "Inter";
  font-style: normal;
  font-weight: 900;
  font-size: 24px;
  line-height: 29px;
}

.form__field {
  margin: 0 auto 29.74px;
  box-sizing: border-box;
  width: 100%;
  height: 27px;
  border: none;
  border-bottom: 1px solid rgba(0, 0, 0, 50%);
  padding: 0 0 10px;
  font-family: "Inter";
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 17px;
}

.form__button {
  width: 358px;
  height: 50.15px;
  border: none;
  background-color: #000;
  color: #fff;
  font-family: "Inter";
  font-style: normal;
  font-weight: 400;
  font-size: 18px;
  line-height: 22px;
  text-align: center;
  margin: 18.26px 0 36.51px;
  cursor: pointer;
  transition: 0.3s;
}

.form__button:hover {
  opacity: 80%;
}

.form__close-icon {
  fill: #fff;
  width: 40px;
  height: 40px;
  z-index: 5;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(215px, -205px) rotate(180deg);
  cursor: pointer;
  transition: 0.3s;
}

.form__close-icon:hover {
  fill: #999999;
}

